--- a/style/custom.scss
+++ b/style/custom.scss
@@ -1,35 +1,80 @@
-@import "./bootstrap/bootstrap.css";
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import "./bootstrap/bootstrap.min.css";
+@import "./breakpoints.scss";
+@import url('https://fonts.googleapis.com/css?family=Oxygen|Quicksand');
 
-$light-fog-primary: #787e74;
-$light-fog-secondary: #c0cdd3;
-$light-fog-tertiary: #fff2c5;
+$font-primary: Quicksand;
+$font-secondary: Oxygen;
+
+$space-bg:  #28282A;
+$space-fg: #E7E8EA;
+$space-contrast-1: #58ada1;
+$space-contrast-2: #F6E782;
+$space-contrast-3: #C44C27;
+
+$light-fog-1: #787e74;
+$light-fog-2: #c0cdd3;
+$light-fog-3: #fff2c5;
 
 body {
-	background-color: $light-fog-tertiary;
+	background-color: $space-bg;
+	
+}
+
+
+.darkspace {
+	margin-left:auto;
+	margin-right:auto;
+	max-width: 1300px;
+	background-color: $space-bg;
+	color: $space-fg;
+	font-family: $font-secondary;
 }
 
 .sidebar-left {
 	position: fixed;
 	top: 0;
 	bottom: 0;
-	left: 0;
 	z-index: 100;
+
+	padding-top: 50px;
 	
-	background-color: $light-fog-primary;
+
+	@media #{$lg}{
+		//min-width: 200px;
+		left: 0;
+	}
+	@media #{$xl}{ 
+		min-width: 300px;
+	}
+
+
+	/* Style Checker */
+	//border: 1px solid $space-contrast-3;
+
 }
 
 .main-content {
-	font-family: Montserrat;
-	background-color: $light-fog-secondary;
 
-	.content-body {
-		margin: 10px;
-		
+	/*@media #{$lg}{
+		margin-left: 200px;
+	}*/
+
+	@media #{$xl}{ 
+		margin-left: 300px;
+		max-width: 1000px;
+	}
+
+	h1, h2, h3, h4, h5, h6 {
+		font-family: $font-primary;
+	}
+
+	.main-body {
 		p {
-			margin-bottom: 150px;
+			margin-bottom: 200px;
 		}
 	}
-}
 
+	/* Style Checker */
+	//border: 1px solid yellow;
+}
 
