--- a/style/custom.scss
+++ b/style/custom.scss
@@ -17,14 +17,12 @@ $light-fog-3: #fff2c5;
 
 body {
 	background-color: $space-bg;
-	
 }
 
 
 .darkspace {
 	margin-left:auto;
 	margin-right:auto;
-	max-width: 1300px;
 	background-color: $space-bg;
 	color: $space-fg;
 	font-family: $font-secondary;
@@ -35,16 +33,58 @@ body {
 	top: 0;
 	bottom: 0;
 	z-index: 100;
-
 	padding-top: 50px;
 	
 
 	@media #{$lg}{
 		//min-width: 200px;
-		left: 0;
+		left: 1px;
 	}
 	@media #{$xl}{ 
-		min-width: 300px;
+		//min-width: 300px;
+		left: 1px;
+	}
+
+	.sidebar-body {
+		height: 85%;
+		overflow-y: auto;
+		padding: 0;
+		.sidebar-links {
+			border-radius: 4px;
+			border-left: 4px solid $space-contrast-2;
+			max-width: 220px;
+			overflow-y: auto;
+
+			@media #{$xl}{ 
+				margin: 0 auto;
+			}
+			.sidebar-link-item {
+				margin: 50px 0;
+				padding-left: 20px;
+
+				
+				a {
+					padding: 50px 0;
+					font-size: 18px;
+					
+					color: $space-contrast-1;
+					&:hover {
+						text-decoration: none !important;
+					}
+				}
+				
+				
+				
+			}
+
+			.sidebar-timeline {
+				position: fixed;
+				width: 1px;
+				height: 90%;
+				
+				
+			}
+		}
 	}
 
 
@@ -59,9 +99,12 @@ body {
 		margin-left: 200px;
 	}*/
 
+	//padding-bottom: 300px;
+	padding-left: 20px;
+
 	@media #{$xl}{ 
-		margin-left: 300px;
-		max-width: 1000px;
+		//margin-left: 300px;
+		//max-width: 1000px;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -69,8 +112,9 @@ body {
 	}
 
 	.main-body {
+		
 		p {
-			margin-bottom: 200px;
+			padding-bottom: 200px;
 		}
 	}
 
@@ -78,3 +122,7 @@ body {
 	//border: 1px solid yellow;
 }
 
+.active-link {
+	color: $space-contrast-3 !important;
+	font-size: 25px !important;
+}
