--- a/style/compiled.css
+++ b/style/compiled.css
@@ -17,7 +17,7 @@ body {
   top: 0;
   bottom: 0;
   z-index: 100;
-  padding-top: 50px;
+  padding: 25px 5px;
   /* Style Checker */
 }
 @media (max-width: 1199.98px) {
@@ -31,15 +31,12 @@ body {
   }
 }
 .sidebar-left .sidebar-body {
-  height: 85%;
-  overflow-y: auto;
   padding: 0;
 }
 .sidebar-left .sidebar-body .sidebar-links {
   border-radius: 4px;
-  border-left: 4px solid #F6E782;
   max-width: 220px;
-  overflow-y: auto;
+  overflow-y: hidden;
 }
 @media (min-width: 1199.98px) {
   .sidebar-left .sidebar-body .sidebar-links {
@@ -47,11 +44,10 @@ body {
   }
 }
 .sidebar-left .sidebar-body .sidebar-links .sidebar-link-item {
-  margin: 50px 0;
+  margin-bottom: 50px;
   padding-left: 20px;
 }
 .sidebar-left .sidebar-body .sidebar-links .sidebar-link-item a {
-  padding: 50px 0;
   font-size: 18px;
   color: #58ada1;
 }
@@ -65,17 +61,18 @@ body {
 }
 
 .main-content {
-  /*@media (max-width: 1199.98px){
-  	margin-left: 200px;
-  }*/
   padding-left: 20px;
   /* Style Checker */
 }
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
   font-family: Quicksand;
 }
-.main-content .main-body p {
-  padding-bottom: 200px;
+.main-content .main-body {
+  padding: 100px 0px;
+}
+.main-content .main-body .main-section {
+  min-height: 500px;
+  max-height: 800px;
 }
 
 .active-link {
