--- a/style/custom.scss
+++ b/style/custom.scss
@@ -1,28 +1,23 @@
 @import "./bootstrap/bootstrap.min.css";
 @import "./breakpoints.scss";
 @import url('https://fonts.googleapis.com/css?family=Oxygen|Quicksand');
-
 $font-primary: Quicksand;
 $font-secondary: Oxygen;
-
-$space-bg:  #28282A;
+$space-bg : #28282A;
 $space-fg: #E7E8EA;
 $space-contrast-1: #58ada1;
 $space-contrast-2: #F6E782;
 $space-contrast-3: #C44C27;
-
 $light-fog-1: #787e74;
 $light-fog-2: #c0cdd3;
 $light-fog-3: #fff2c5;
-
 body {
 	background-color: $space-bg;
 }
 
-
 .darkspace {
-	margin-left:auto;
-	margin-right:auto;
+	margin-left: auto;
+	margin-right: auto;
 	background-color: $space-bg;
 	color: $space-fg;
 	font-family: $font-secondary;
@@ -33,91 +28,61 @@ body {
 	top: 0;
 	bottom: 0;
 	z-index: 100;
-	padding-top: 50px;
-	
-
-	@media #{$lg}{
+	padding: 25px 5px;
+	@media #{$lg} {
 		//min-width: 200px;
 		left: 1px;
 	}
-	@media #{$xl}{ 
+	@media #{$xl} {
 		//min-width: 300px;
 		left: 1px;
 	}
-
 	.sidebar-body {
-		height: 85%;
-		overflow-y: auto;
+		
 		padding: 0;
 		.sidebar-links {
 			border-radius: 4px;
-			border-left: 4px solid $space-contrast-2;
 			max-width: 220px;
-			overflow-y: auto;
-
-			@media #{$xl}{ 
+			overflow-y: hidden;
+			@media #{$xl} {
 				margin: 0 auto;
 			}
 			.sidebar-link-item {
-				margin: 50px 0;
+				margin-bottom: 50px;
 				padding-left: 20px;
-
-				
 				a {
-					padding: 50px 0;
 					font-size: 18px;
-					
 					color: $space-contrast-1;
 					&:hover {
 						text-decoration: none !important;
 					}
 				}
-				
-				
-				
 			}
-
 			.sidebar-timeline {
 				position: fixed;
 				width: 1px;
 				height: 90%;
-				
-				
 			}
 		}
 	}
-
-
 	/* Style Checker */
 	//border: 1px solid $space-contrast-3;
-
 }
 
 .main-content {
-
-	/*@media #{$lg}{
-		margin-left: 200px;
-	}*/
-
-	//padding-bottom: 300px;
 	padding-left: 20px;
 
-	@media #{$xl}{ 
-		//margin-left: 300px;
-		//max-width: 1000px;
-	}
-
-	h1, h2, h3, h4, h5, h6 {
+	h1,h2,h3,h4,h5,h6 {
 		font-family: $font-primary;
 	}
 
 	.main-body {
-		
-		p {
-			padding-bottom: 200px;
+		padding: 100px 0px;
+		.main-section{
+			min-height: 500px;
+			max-height: 800px;
 		}
 	}
-
 	/* Style Checker */
 	//border: 1px solid yellow;
 }
