--- a/style/custom.scss
+++ b/style/custom.scss
@@ -70,6 +70,10 @@ body {
 }
 
 .main-content {
+	@media #{$xl} {
+		//max-width: 1500px;
+		
+	}
 	padding-left: 20px;
 
 	h1,h2,h3,h4,h5,h6 {
@@ -77,7 +81,8 @@ body {
 	}
 
 	.main-body {
-		padding: 100px 0px;
+		padding-top: 100px; 
+		padding-bottom: 300px;
 		.main-section{
 			min-height: 500px;
 			max-height: 800px;
@@ -90,4 +95,11 @@ body {
 .active-link {
 	color: $space-contrast-3 !important;
 	font-size: 25px !important;
+}
+
+a{
+	-webkit-transition: all 0.2s ease;
+	-moz-transition: all 0.2s ease;
+	-o-transition: all 0.2s ease;
+	transition: all 0.2s ease;
 }
