--- a/style/compiled.css
+++ b/style/compiled.css
@@ -1,5 +1,49 @@
 @import "./bootstrap/bootstrap.min.css";
 @import url("https://fonts.googleapis.com/css?family=Oxygen|Quicksand");
+@import url("https://fonts.googleapis.com/css?family=Oxygen|Quicksand");
+@import url("https://fonts.googleapis.com/css?family=Oxygen|Quicksand");
+body {
+  background-color: #28282A;
+}
+
+.darkspace {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #28282A;
+  color: #E7E8EA;
+  font-family: Oxygen;
+}
+
+.main-content {
+  padding-left: 20px;
+  /* Style Checker */
+}
+.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+  font-family: Quicksand;
+}
+.main-content .main-body {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.main-content .main-body .main-section {
+  min-height: 500px;
+}
+.main-content .main-body .main-section h3 {
+  color: #C44C27;
+}
+
+.active-link {
+  color: #F6E782 !important;
+  font-size: 25px !important;
+}
+
+.even-content {
+  color: #c0cdd3;
+  background-color: #787e74;
+  min-height: 300px !important;
+  max-height: 300px !important;
+}
+
 body {
   background-color: #28282A;
 }
@@ -32,6 +76,7 @@ body {
 }
 .sidebar-left .sidebar-body {
   padding: 0;
+  padding-top: 100px;
 }
 .sidebar-left .sidebar-body .sidebar-links {
   border-radius: 4px;
@@ -50,9 +95,15 @@ body {
 .sidebar-left .sidebar-body .sidebar-links .sidebar-link-item a {
   font-size: 18px;
   color: #58ada1;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
 }
 .sidebar-left .sidebar-body .sidebar-links .sidebar-link-item a:hover {
   text-decoration: none !important;
+  color: #F6E782 !important;
+  font-size: 25px !important;
 }
 .sidebar-left .sidebar-body .sidebar-links .sidebar-timeline {
   position: fixed;
@@ -60,32 +111,16 @@ body {
   height: 90%;
 }
 
-.main-content {
-  padding-left: 20px;
-  /* Style Checker */
-}
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
-  font-family: Quicksand;
-}
-.main-content .main-body {
-  padding-top: 100px;
-  padding-bottom: 300px;
-}
-.main-content .main-body .main-section {
-  min-height: 500px;
-  max-height: 800px;
+body {
+  background-color: #28282A;
 }
 
-.active-link {
-  color: #F6E782 !important;
-  font-size: 25px !important;
-}
-
-a {
-  -webkit-transition: all 0.2s ease;
-  -moz-transition: all 0.2s ease;
-  -o-transition: all 0.2s ease;
-  transition: all 0.2s ease;
+.darkspace {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #28282A;
+  color: #E7E8EA;
+  font-family: Oxygen;
 }
 
 /*# sourceMappingURL=compiled.css.map */
