--- a/style/compiled.css
+++ b/style/compiled.css
@@ -3,7 +3,6 @@
 @import url("https://fonts.googleapis.com/css?family=Oxygen|Quicksand");
 @import url("https://fonts.googleapis.com/css?family=Oxygen|Quicksand");
 html, body {
-  background-color: #28282A;
   height: 100%;
   margin: 0;
 }
@@ -16,17 +15,60 @@ html, body {
   font-family: Oxygen;
 }
 
-.parallax-nightsky {
+.parallax-nebula {
   /* The image used */
-  background-image: url("../res/nightsky.jpg");
+  background-image: url("../res/nebula.png");
   /* Set a specific height */
-  height: 500px;
+  height: 100%;
   width: 100%;
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  color: #c0cdd3;
+}
+
+.parallax-moon {
+  /* The image used */
+  background-image: url("../res/moon.png");
+  /* Set a specific height */
+  height: 100%;
+  width: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #c0cdd3;
+}
+
+.parallax-nightsky {
+  /* The image used */
+  background-image: url("../res/nightsky.png");
+  /* Set a specific height */
+  height: 100%;
+  width: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #c0cdd3;
+}
+
+.parallax-dawn {
+  /* The image used */
+  background-image: url("../res/dawn.png");
+  /* Set a specific height */
+  height: 100%;
+  width: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #c0cdd3;
 }
 
 .wrapper-fill-screen {
@@ -39,6 +81,7 @@ html, body {
 }
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
   font-family: Quicksand;
+  font-weight: 600;
 }
 .main-content .main-body {
   /*padding-top: 50px; 
@@ -46,6 +89,13 @@ html, body {
 }
 .main-content .main-body .main-section {
   padding: 4% 2%;
+  font-size: 18px;
+  text-shadow: 0px 0px 6px #000;
+}
+@media (max-width: 575.98px) {
+  .main-content .main-body .main-section {
+    padding: 10% 4%;
+  }
 }
 .main-content .main-body .main-section h3 {
   color: #C44C27;
@@ -64,7 +114,6 @@ html, body {
 }
 
 html, body {
-  background-color: #28282A;
   height: 100%;
   margin: 0;
 }
@@ -77,17 +126,60 @@ html, body {
   font-family: Oxygen;
 }
 
-.parallax-nightsky {
+.parallax-nebula {
   /* The image used */
-  background-image: url("../res/nightsky.jpg");
+  background-image: url("../res/nebula.png");
   /* Set a specific height */
-  height: 500px;
+  height: 100%;
   width: 100%;
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  color: #c0cdd3;
+}
+
+.parallax-moon {
+  /* The image used */
+  background-image: url("../res/moon.png");
+  /* Set a specific height */
+  height: 100%;
+  width: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #c0cdd3;
+}
+
+.parallax-nightsky {
+  /* The image used */
+  background-image: url("../res/nightsky.png");
+  /* Set a specific height */
+  height: 100%;
+  width: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #c0cdd3;
+}
+
+.parallax-dawn {
+  /* The image used */
+  background-image: url("../res/dawn.png");
+  /* Set a specific height */
+  height: 100%;
+  width: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #c0cdd3;
 }
 
 .wrapper-fill-screen {
@@ -118,9 +210,9 @@ html, body {
   padding: 0;
 }
 .sidebar-left .sidebar-body .sidebar-links {
-  border-radius: 4px;
   max-width: 220px;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 @media (min-width: 1199.98px) {
   .sidebar-left .sidebar-body .sidebar-links {
@@ -129,7 +221,7 @@ html, body {
 }
 .sidebar-left .sidebar-body .sidebar-links .sidebar-link-item {
   margin-bottom: 50px;
-  padding-left: 20px;
+  padding-left: 8%;
 }
 .sidebar-left .sidebar-body .sidebar-links .sidebar-link-item a {
   font-size: 18px;
@@ -151,7 +243,6 @@ html, body {
 }
 
 html, body {
-  background-color: #28282A;
   height: 100%;
   margin: 0;
 }
@@ -164,17 +255,60 @@ html, body {
   font-family: Oxygen;
 }
 
-.parallax-nightsky {
+.parallax-nebula {
   /* The image used */
-  background-image: url("../res/nightsky.jpg");
+  background-image: url("../res/nebula.png");
   /* Set a specific height */
-  height: 500px;
+  height: 100%;
   width: 100%;
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  color: #c0cdd3;
+}
+
+.parallax-moon {
+  /* The image used */
+  background-image: url("../res/moon.png");
+  /* Set a specific height */
+  height: 100%;
+  width: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #c0cdd3;
+}
+
+.parallax-nightsky {
+  /* The image used */
+  background-image: url("../res/nightsky.png");
+  /* Set a specific height */
+  height: 100%;
+  width: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #c0cdd3;
+}
+
+.parallax-dawn {
+  /* The image used */
+  background-image: url("../res/dawn.png");
+  /* Set a specific height */
+  height: 100%;
+  width: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #c0cdd3;
 }
 
 .wrapper-fill-screen {
