--- a/style/main-content.scss
+++ b/style/main-content.scss
@@ -3,14 +3,20 @@
 	padding: 0;
 	h1,h2,h3,h4,h5,h6 {
 		font-family: $font-primary;
+		font-weight: 600;
 	}
 
 	.main-body {
 		/*padding-top: 50px; 
 		padding-bottom: 100px;*/
 		.main-section{
-			padding: 4% 2%;
 
+			@media #{$xs} {
+				padding: 10% 4%;	
+			}
+			padding: 4% 2%;
+			font-size: 18px;
+			text-shadow: 0px 0px 6px #000;
 			h3 {
 				color: $space-contrast-3;
 			}
