--- a/style/sidebar-left.scss
+++ b/style/sidebar-left.scss
@@ -1,5 +1,6 @@
 @import "./theme-darkspace";
 .sidebar-left {
+	//background-color: $space-bg;
 	position: fixed;
 	top: 0;
 	bottom: 0;
@@ -7,6 +8,7 @@
 	padding: 25px 5px;
 	padding-top: 50px;
 	overflow: auto;
+	
 	@media #{$lg} {
 		//min-width: 200px;
 		left: 1px;
@@ -19,15 +21,15 @@
 		padding: 0;
 		
 		.sidebar-links {
-			border-radius: 4px;
 			max-width: 220px;
 			overflow-y: hidden;
+			overflow-x: hidden;
 			@media #{$xl} {
 				margin: 0 auto;
 			}
 			.sidebar-link-item {
 				margin-bottom: 50px;
-				padding-left: 20px;
+				padding-left: 8%;
 				a {
 					font-size: 18px;
 					color: $space-contrast-1;
