--- a/style/compiled.css
+++ b/style/compiled.css
@@ -76,6 +76,7 @@ html, body {
 }
 
 .main-content {
+  background-color: #28282A;
   padding: 0;
   /* Style Checker */
 }
@@ -88,6 +89,7 @@ html, body {
   padding-bottom: 100px;*/
 }
 .main-content .main-body .main-section {
+  background-color: #28282A;
   padding: 4% 2%;
   font-size: 18px;
   text-shadow: 0px 0px 6px #000;
