--- a/style/breakpoints.scss
+++ b/style/breakpoints.scss
@@ -2,4 +2,4 @@ $xs: "(max-width: 575.98px)";
 $sm: "(max-width: 767.98px)";
 $md: "(max-width: 991.98px)";
 $lg: "(max-width: 1199.98px)";
-$xl: "(min-width: 1199.98px)";
+$xl: "(max-width: 2565px)";
