--- a/style/main-content.scss
+++ b/style/main-content.scss
@@ -8,8 +8,7 @@
 	}
 
 	.main-body {
-		/*padding-top: 50px; 
-		padding-bottom: 100px;*/
+
 		.main-section{
 			background-color: $space-bg;
 			padding: 4% 2%;
@@ -23,6 +22,13 @@
 			h3 {
 				color: $space-contrast-3;
 			}
+		}
+		
+		@media #{$xl} {
+			@include parallax-enabled;
+		}
+		@media #{$xs} {
+			@include parallax-disabled;
 		}
 	}
 	/* Style Checker */
