replace grid with flexbox

--- a/style/_theme.scss
+++ b/style/_theme.scss
@@ -9,3 +9,8 @@ $theme-text__size-1: 26px;
 $theme-text__size-2: 24px;
 $theme-text__size-3: 20px;
 $theme-text__size-4: 16px;
+
+$theme-text__size-1res: 1.85rem;
+$theme-text__size-2res: 1.65rem;
+$theme-text__size-3res: 1.45rem ;
+$theme-text__size-4res: 1.25rem;
